# korkeasaari

./: .codespellignore  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
data/clean/: all_events.csv  finnish_school_holidays_daily_2018_2024.csv  helsinki_kaisaniemi_daily_filtered.csv  helsinki_kaisaniemi_hourly.csv  holidays.csv  visitors.csv  weather.csv
data/raw/: Kavijatilasto_2018.xlsx  Kavijatilasto_2019.xlsx  Kavijatilasto_2020.xlsx  Kavijatilasto_2021.xlsx  Kavijatilasto_2022.xlsx  Kavijatilasto_2023.xlsx  events.txt
docs/: index.html  korkeasaari_slides.html  korkeasaari_slides.qmd  nord.scss
docs/_extensions/emilhvitfeldt/editable/: _extension.yml  editable.lua
korkeasaari/: __init__.py  check_clean_data.py  model.py  preprocess_data.py  types.py  utils.py
notebooks/: .cache.sqlite  marketing_model_pymc.ipynb  model_baseline.py  model_events.py  model_weather.py  model_weather2.py  model_weather_hourly.py  model_weekdays.py  parse_and_load_data.ipynb  parse_weather_data.ipynb
notebooks/.ipynb_checkpoints/: marketing_model_pymc-checkpoint.ipynb
presentation/: korkeasaari_slides.html  korkeasaari_slides.qmd  nord.scss
rules/: generate-tasks.mdc
scripts/: parse_events.py  parse_weather_daily.py  parse_weather_hourly.py
tasks/: prd-pymc-timeseries-presentation.md  tasks-prd-pymc-timeseries-presentation.md
tests/: test_model.py  test_utils.py
