[project]
authors = [{name = "pymc-labs", email = "info@pymc-labs.com"}]
description = "Add a short description here"
name = "korkeasaari"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = ["openmeteo-requests>=1.5.0,<2", "retry-requests>=2.0.0,<3", "requests-cache>=1.2.1,<2"]

[project.optional-dependencies]
test = ["pytest"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64", "osx-64"]

[tool.pixi.pypi-dependencies]
korkeasaari = { path = ".", editable = true }

[tool.pixi.dependencies]
pandas = "*"
numpy = "*"
ruff = "*"
python-dotenv = "*"
pre-commit = "*"
beartype = "*"
pymc = "*"
openpyxl = ">=3.1.5,<4"
jupyterlab = ">=4.4.3,<5"
ipykernel = ">=6.29.5,<7"
ipywidgets = ">=8.1.7,<9"
marimo = ">=0.13.6,<0.14"
openai = ">=1.84.0,<2"
seaborn = ">=0.13.2,<0.14"
matplotlib = ">=3.10.3,<4"
nutpie = ">=0.13.4,<0.14"
numba = ">=0.61.2,<0.62"
pymc-marketing = ">=0.14.0"

[tool.pixi.environments]
default = { features = ["test"], solve-group = "default" }
test = { features = ["test"], solve-group = "default" }
minimal = { features = [], solve-group = "default" }

[tool.pixi.feature.test.tasks]
test = "pytest"
