[project]
authors = [{name = "Teemu Säilynoja", email = "teemu.sailynoja@gmail.com"}]
description = "Environment to reproduce my notebooks for PyData presentation."
name = "korkeasaari"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = ["marimo[recommended]>=0.14.17,<0.15", "polars[pyarrow]>=1.32.3,<2"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64", "osx-64"]

[tool.pixi.pypi-dependencies]
korkeasaari = { path = ".", editable = true }

[tool.pixi.dependencies]
pandas = ">=2.3.1,<3"
numpy = ">=2.2.6,<3"
ruff = ">=0.12.8,<0.13"
python-dotenv = ">=1.1.1,<2"
pre-commit = ">=4.3.0,<5"
beartype = ">=0.21.0,<0.22"
pymc = ">=5.25.1,<6"
openpyxl = ">=3.1.5,<4"
ipywidgets = ">=8.1.7,<9"
seaborn = ">=0.13.2,<0.14"
matplotlib = ">=3.10.5,<4"
nutpie = ">=0.15.2,<0.16"
numba = ">=0.61.2,<0.62"
pymc-marketing = ">=0.15.1,<0.16"
altair = ">=5.5.0,<6"
jax = ">=0.7.0,<0.8"
numpyro = ">=0.19.0,<0.20"
blackjax = ">=1.2.4,<2"
python-lsp-server = ">=1.13.0,<2"
plotnine = ">=0.15.0,<0.16"
